--- a/css/estilo.css
+++ b/css/estilo.css
@@ -41,3 +41,17 @@ body
 {
     font-size: 20px;
 }
+
+#post 
+{
+    background: white;
+    padding: 1em;
+}
+
+#footer 
+{
+    background:white;
+    color:white;
+    text-align: center;
+    padding: 1em;
+}
